Ajustes nas validações e correções ortográficas

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -230,7 +230,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Cursos</li>
+                        <li class="active">Curso</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -1038,7 +1038,7 @@
                                 <label class="form-label semibold" for="">Observações</label>
                                 <textarea rows="4" id="curso-observacao" class="form-control" placeholder="Observações"></textarea>
                                 <small>Você tem
-                                    <span id="curso-observacao-counter" class="counter-value semibold"></span> characters restantes.
+                                    <span id="curso-observacao-counter" class="counter-value semibold"></span> caracteres restantes.
                                 </small>
                             </div>
                         </div>
