--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -231,7 +231,7 @@
                     <ol class="breadcrumb clearfix">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Grupos</li>
+                        <li class="active">Grupo</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -283,13 +283,12 @@
                                             </small>
                                         </div>
                                     </div>
-                                    <form id="form-signin_v1" name="form-signin_v1" method="post">
+                                    <form id="grupos-form" class="validate-form" name="" method="">
                                         <div class="row mt-md divider-top">
                                             <div class="col-lg-9">
                                                 <fieldset class="form-group">
-                                                    <label class="form-label semibold" for="">Nome
-                                                        <span class="semibold text-danger h4">*</span></label>
-                                                    <input id="nome-grupo" class="form-control" name="signin_v1[<strong>Nome do grupo</strong>]" type="text" data-validation="[NOTEMPTY]" value="Adolescente">
+                                                    <label class="form-label semibold" for="">Nome<span class="semibold text-danger h4">*</span></label>
+                                                    <input type="text" class="form-control" id="gruponome" name="gruponome" placeholder="Nome" value="TEENS">
                                                 </fieldset>
                                             </div>
                                             <div class="col-sm-3">
@@ -299,23 +298,24 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row mb-lg">
+                                        <div class="row">
                                             <div class="col-sm-12">
-                                                <label class="form-label semibold" for="">Descrição<span class="semibold text-danger h4">*</span></label>
-                                                <textarea rows="4" class="form-control" placeholder="Descrição">Grupo de cursos destinado a adolescentes, de 14 a 18 anos</textarea>
+                                                <fieldset class="form-group">
+                                                    <label class="form-label semibold" for="">Descrição<span class="semibold text-danger h4">*</span></label>
+                                                    <textarea rows="4" class="form-control" id="grupodescricao" name="grupodescricao" placeholder="Descrição"></textarea>
+                                                    <small>Você tem
+                                                        <span id="grupo-descricao-counter" class="counter-value semibold"></span> caracteres restantes.
+                                                    </small>
+                                                </fieldset>
                                             </div>
                                         </div>
-                                        <div class="row divider-top pb-md">
+                                        <div class="row divider-top">
                                             <div class="col-sm-12">
-                                                <button type="button" class="btn btn-success" id="notie-success">
-                                                    <i class="fa fa-floppy-o mr-xs"></i> Salvar
+                                                <button type="submit" class="btn btn-primary btn-success">
+                                                    <i class="fa fa-floppy-o mr-xs" aria-hidden="true"></i> Salvar
                                                 </button>
-                                                <button type="button" class="btn btn-danger swal-btn-cancel ml-sm" id="">
-                                                    <i class="fa fa-times mr-xs"></i> Excluir
-                                                </button>
-                                                <a href="grupos.html" class="btn btn-secondary ml-sm">
+                                                <a href="grupos.html" data-toggle="tab" class="btn btn-secondary ml-md">
                                                     <i class="fa fa-ban mr-xs" aria-hidden="true"></i> Cancelar</a>
-
                                             </div>
                                         </div>
                                     </form>
@@ -348,47 +348,14 @@
 
         <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
         <script src="../../js/lib/notie/notie.js"></script>
-        <script src="../../js/lib/notie/notie-init.js"></script>
 
-        <script>
-            $('#form-signin_v1').validate();
-        </script>
+        <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
 
-        <script>
-            $(document).ready(function () {
-                $('.swal-btn-cancel').click(function (e) {
-                    e.preventDefault();
-                    swal({
-                                title: "Você tem certeza desta ação?",
-                                text: "Isto excluirá o grupo, mas não excluirá os cursos vinculados a ele.",
-                                type: "warning",
-                                showCancelButton: true,
-                                confirmButtonClass: "btn-danger",
-                                confirmButtonText: "Sim, deletar",
-                                cancelButtonText: "Não, cancelar",
-                                closeOnConfirm: false,
-                                closeOnCancel: false
-                            },
-                            function (isConfirm) {
-                                if (isConfirm) {
-                                    swal({
-                                        title: "Excluído!",
-                                        text: "O grupo foi excluído",
-                                        type: "success",
-                                        confirmButtonClass: "btn-success"
-                                    });
-                                } else {
-                                    swal({
-                                        title: "Cancelado",
-                                        text: "Ação cancelada",
-                                        type: "error",
-                                        confirmButtonClass: "btn-danger"
-                                    });
-                                }
-                            });
-                });
-            });
-        </script>
+        <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
+
+        <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
+
+        <script src="js/grupos-scripts.js"></script>
 
     </body>
 </html>
