--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -231,7 +231,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Grupos</li>
+                        <li class="active">Grupo</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -448,15 +448,15 @@
                                 </section>
 
                                 <section role="tabpanel" class="tab-pane fade" id="tabs-grupos-tab-2">
-                                    <form id="grupos-form" class="validate-form" name="" method="">
-                                        <div class="row mt-sm">
-                                            <div class="col-sm-12">
-                                                <h4 class="semibold"> Cadastrar novo grupo</h4>
-                                                <small>Campos com asterisco vermelho (
-                                                    <span class="semibold text-danger">*</span> ) são obrigatórios
-                                                </small>
-                                            </div>
+                                    <div class="row mt-sm">
+                                        <div class="col-sm-12">
+                                            <h4 class="semibold"> Cadastrar novo grupo</h4>
+                                            <small>Campos com asterisco vermelho (
+                                                <span class="semibold text-danger">*</span> ) são obrigatórios
+                                            </small>
                                         </div>
+                                    </div>
+                                    <form id="grupos-form" class="validate-form" name="" method="">
                                         <div class="row mt-md divider-top">
                                             <div class="col-lg-9">
                                                 <fieldset class="form-group">
@@ -477,7 +477,7 @@
                                                     <label class="form-label semibold" for="">Descrição<span class="semibold text-danger h4">*</span></label>
                                                     <textarea rows="4" class="form-control" id="grupodescricao" name="grupodescricao" placeholder="Descrição"></textarea>
                                                     <small>Você tem
-                                                        <span id="grupo-descricao-counter" class="counter-value semibold"></span> characters restantes.
+                                                        <span id="grupo-descricao-counter" class="counter-value semibold"></span> caracteres restantes.
                                                     </small>
                                                 </fieldset>
                                             </div>
@@ -572,11 +572,11 @@
         <script src="../../js/lib/select2/select2.full.min.js"></script>
 
         <script src="../../js/lib/notie/notie.js"></script>
-        <script src="../../js/lib/notie/notie-init.js"></script>
 
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
+
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
 
         <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
