--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -229,7 +229,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Níveis</li>
+                        <li class="active">Nível</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -997,7 +997,7 @@
 
                                                 </div>
                                             </div>
-                                            <div class="row divider-top pb-md">
+                                            <div class="row divider-top">
                                                 <div class="col-sm-12">
                                                     <button type="submit" class="btn btn-primary btn-success">
                                                         <i class="fa fa-floppy-o mr-xs" aria-hidden="true"></i> Salvar
