--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -229,7 +229,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Unidades</li>
+                        <li class="active">Unidade</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -640,7 +640,7 @@
                                                                         <td>
                                                                             <p>Principal</p></td>
                                                                         <td>
-                                                                            (00) 0000-0000
+                                                                            (00) 00000000
                                                                         </td>
                                                                         <td class="text-center">
                                                                             <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
@@ -844,16 +844,16 @@
         <script src="../../js/lib/datatables-net/datatables.min.js"></script>
         <script src="../../js/start-datatables.js"></script>
 
-        <script src="../../js/app.js"></script>
         <script src="../../js/plugins.js"></script>
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
-        <script src="../../js/lib/input-mask/input-mask-init.js"></script>
 
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
+
+        <script src="../../js/app.js"></script>
 
         <script src="js/unidade-scripts.js"></script>
 
