--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -804,7 +804,7 @@
                                 <label class="form-label semibold" for="">Observações</label>
                                 <textarea rows="4" id="curso-observacao" class="form-control" placeholder="Observações"></textarea>
                                 <p>Você tem
-                                    <span id="curso-observacao-counter" class="counter-value semibold"></span> characters restantes.
+                                    <span id="curso-observacao-counter" class="counter-value semibold"></span> caracteres restantes.
                                 </p>
                             </div>
                         </div>
