--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -227,7 +227,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Postos avançados</li>
+                        <li class="active">Posto avançado</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
@@ -753,11 +753,11 @@
                                                                         <ul class="chart-legend-list">
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Principal
+                                                                                (00) 00000000 - Principal
                                                                             </li>
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Outros
+                                                                                (00) 00000000 - Outros
                                                                             </li>
                                                                         </ul>
                                                                     </td>
@@ -864,7 +864,7 @@
                                 <label class="form-label semibold" for="">Observações</label>
                                 <textarea rows="4" class="form-control" placeholder="Observações" id="posto-observacao"></textarea>
                                 <p>Você tem
-                                    <span id="posto-observacao-counter" class="counter-value semibold"></span> characters restantes.
+                                    <span id="posto-observacao-counter" class="counter-value semibold"></span> caracteres restantes.
                                 </p>
                             </div>
                         </div>
@@ -904,7 +904,7 @@
                                                 <div class="col-sm-7">
                                                     <label class="form-label semibold" for="">Número</label>
                                                     <div class="input-group">
-                                                        <input type="text" class="form-control" placeholder="Número" id="telefone-unidade">
+                                                        <input type="text" class="form-control" placeholder="Número" id="telefone-posto">
                                                                         <span class="input-group-btn">
                                                                           <button class="btn btn-secondary-outline" type="button">
                                                                               <i class="fa fa-plus" aria-hidden="true"></i>
@@ -928,7 +928,7 @@
                                                         <td>
                                                             <p>Principal</p></td>
                                                         <td>
-                                                            (00) 0000-0000
+                                                            (00) 00000000
                                                         </td>
                                                         <td class="text-center">
                                                             <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
@@ -1101,11 +1101,11 @@
                                                             <ul class="chart-legend-list">
                                                                 <li>
                                                                     <div class="dot blue"></div>
-                                                                    (00) 0000-0000 - Principal
+                                                                    (00) 00000000 - Principal
                                                                 </li>
                                                                 <li>
                                                                     <div class="dot blue"></div>
-                                                                    (00) 0000-0000 - Outros
+                                                                    (00) 00000000 - Outros
                                                                 </li>
                                                             </ul>
                                                         </td>
@@ -1123,11 +1123,11 @@
                                                             <ul class="chart-legend-list">
                                                                 <li>
                                                                     <div class="dot blue"></div>
-                                                                    (00) 0000-0000 - Principal
+                                                                    (00) 00000000 - Principal
                                                                 </li>
                                                                 <li>
                                                                     <div class="dot blue"></div>
-                                                                    (00) 0000-0000 - Outros
+                                                                    (00) 00000000 - Outros
                                                                 </li>
                                                             </ul>
                                                         </td>
