--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -229,7 +229,7 @@
                     <ol class="breadcrumb blue-ctj">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Serviços</li>
+                        <li class="active">Serviço</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
